snippets in good place

--- a/src/assets/styles/theme.scss
+++ b/src/assets/styles/theme.scss
@@ -32,7 +32,10 @@
 
 // Organisms
 @import './organisms/inline-cart';
+@import './organisms/primary-navigation';
 
+// Layout
+@import './layout/header';
 
 
 #preview-bar-iframe {
