--- a/src/sections/static/footer.liquid
+++ b/src/sections/static/footer.liquid
@@ -1,4 +1,7 @@
-<section data-section-id="{{ section.id }}" data-section-type="footer">
+<section
+  class="oo-footer"
+  data-section-id="{{ section.id }}"
+  data-section-type="footer">
 
   {%- include 'footer', menu: section.settings.footer_navigation -%}
 
