--- a/src/snippets/core/molecules/form-add-to-cart.liquid
+++ b/src/snippets/core/molecules/form-add-to-cart.liquid
@@ -14,7 +14,7 @@
 {%- if _errors == '' -%}
 
   <form
-    class="oo-form-add-to-cart {{ classes -}}"
+    class="oo-form {{ classes -}}"
     method="post"
     action="/cart/add"
     accept-charset="UTF-8"
