--- a/src/assets/styles/atoms/_label.scss
+++ b/src/assets/styles/atoms/_label.scss
@@ -10,3 +10,23 @@
 .input-type-radio.inside-oo-input-group:checked + .oo-label {
   border-color: rgba(0, 0, 0, 1.0);
 }
+
+[data-option-value="black"] .oo-label {
+  background-color: rgb(0, 0, 0);
+}
+
+[data-option-value="white"] .oo-label {
+  background-color: rgb(255, 255, 255);
+}
+
+[data-option-value="pink"] .oo-label {
+  background-color: rgb(242, 202, 208);
+}
+
+[data-option-value="maple-sugar"] .oo-label {
+  background-color: rgb(226, 188, 162);
+}
+
+[data-option-value="wine-tasting"] .oo-label {
+  background-color: rgb(69, 31, 43);
+}
