--- a/src/layout/theme.liquid
+++ b/src/layout/theme.liquid
@@ -25,7 +25,11 @@
     {{ content_for_header }}
   </head>
 
-  <body id="{{ page_title | handle }}" class="template-{{ template.name | handle }}">
+  <body
+    data-template="{{ template.name | handle }}"
+    {%- if template.suffix != blank -%}
+    data-alternate-template="{{ template.suffix | handle }}"
+    {%- endif -%}>
 
     {%- include 'add-to-cart-controls' -%}
 
@@ -38,10 +42,7 @@
 
     {%- section 'topbar' -%}
 
-    {% comment %}{% section 'header' %}{% endcomment %}
-
-    {%- section 'main-navigation' -%}
-    {%- section 'secondary-navigation' -%}
+    {%- section 'header' -%}
 
     <main role="main" class="oo-main" id="MainContent">
       {{ content_for_layout }}
