--- a/src/sections/static/hero.liquid
+++ b/src/sections/static/hero.liquid
@@ -1,116 +1,116 @@
-{% assign text_style_color = 'color:' | append: section.settings.overlay_text_color %}
-{% assign text_style_align = ';text-align:' | append: section.settings.overlay_text_alignment %}
-{% assign text_style_size = ';font-size:' | append: section.settings.overlay_text_size %}
-{% assign text_style_container_width = 'px;width:' | append: section.settings.overlay_text_container_width %}
-{% assign text_style_x_position = '%;left:' | append: section.settings.overlay_text_x_position %}
-{% assign text_style_y_position = '%;top:' | append: section.settings.overlay_text_y_position %}
-{% assign text_style_position_offset = '%;transform:translate(-' | append: section.settings.overlay_text_x_offset | append: '%, -' | append: section.settings.overlay_text_y_offset | append: '%);' %}
+<section data-section-id="{{ section.id }}" data-section-type="hero{%- if section.blocks.size > 1 -%}-slider{%- endif -%}">
 
-{% assign text_style_string = text_style_color | append: text_style_align | append: text_style_size | append: text_style_container_width | append: text_style_x_position | append: text_style_y_position | append: text_style_position_offset %}
+  {%- if section.blocks.size > 1 -%}
 
+    {%- for block in section.blocks -%}
 
-<div class="hero-component">
-  <img class="hero-background-image" src="{{ section.settings.background_image.src | img_url: '2400x' }}" alt="hero background image">
-  <h2 class="overlay-text-container rte" style="{{ text_style_string }}">
-    {{ section.settings.overlay_text }}
-  </h2>
-</div>
+      {%- capture _slides -%}
 
-<style>
-  [data-theme-editor-setting="section.hero-component.overlay_text"]::before {
-    content: url('data:image/svg+xml; utf8, <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="512" height="512" viewBox="0 0 16 16" class=""><g><path fill="#444444" d="M15 7h-1c-0.2-3.2-2.8-5.7-6-6v-1h-1v1c-3.2 0.3-5.7 2.8-6 6h-1v1h1c0.2 3.2 2.8 5.7 6 6v1h1v-1c3.2-0.2 5.7-2.8 6-6h1v-1zM8 12.4v-2.4h-1v2.4c-2.4-0.2-4.2-2-4.4-4.4h2.4v-1h-2.4c0.2-2.4 2-4.2 4.4-4.4v2.4h1v-2.4c2.4 0.2 4.2 2.1 4.4 4.4h-2.4v1h2.4c-0.2 2.4-2 4.2-4.4 4.4z" class="active-path" style="fill:#FFFF00;opacity:0.5;"></path></g> </svg>');
-    position: absolute;
-    left: {{ section.settings.overlay_text_x_offset }}%;
-    top: {{ section.settings.overlay_text_y_offset }}%;
-    transform: translate(-50%, -50%) scale(0.075);
-  }
-</style>
+        -->{%- include 'hero',
+          image: block.settings.image,
+          size: block.settings.image_size,
+          video: block.settings.video_url,
+          content: block.settings.content,
+          title: block.settings.title,
+          subtitle: block.settings.subtitle,
+          button_one_text: block.settings.button_one_text,
+          button_one_href: block.settings.button_one_href,
+          button_two_text: block.settings.button_two_text,
+          button_two_href: block.settings.button_two_href -%}
+
+      {%- endcapture -%}
+
+      {%- include 'slider',
+        name: 'hero-slider',
+        slides: _slides -%}
+
+      {%- assign _slides = nil -%}
+
+    {%- endfor -%}
+
+  {%- else -%}
+
+    {%- include 'hero',
+      image: block.settings.image,
+      size: block.settings.image_size,
+      video: block.settings.video_url,
+      content: block.settings.content,
+      title: block.settings.title,
+      subtitle: block.settings.subtitle,
+      button_one_text: block.settings.button_one_text,
+      button_one_href: block.settings.button_one_href,
+      button_two_text: block.settings.button_two_text,
+      button_two_href: block.settings.button_two_href -%}
+
+  {%- endif -%}
+
+</section>
 
 {% schema %}
   {
-    "name": "Hero Component",
-    "class": "testing",
-    "settings": [{
-      "type": "header",
-      "content": "Hero Component"
-    }, {
-      "type": "image_picker",
-      "id": "background_image",
-      "label": "Background Image"
-    }, {
-      "type": "richtext",
-      "id": "overlay_text",
-      "label": "Overlay Text"
-    }, {
-      "type": "color",
-      "id": "overlay_text_color",
-      "label": "Overlay Text Color",
-      "default": "#000000"
-    }, {
-      "type": "radio",
-      "id": "overlay_text_alignment",
-      "label": "Overlay Text Alignment",
-      "options": [
-        { "value": "left", "label": "Left" },
-        { "value": "center", "label": "Center" },
-        { "value": "right", "label": "Right" }
-      ],
-      "default": "left"
-    }, {
-      "type": "range",
-      "id": "overlay_text_size",
-      "label": "Overlay Text Size",
-      "min": 0,
-      "max": 100,
-      "step": 1,
-      "unit": "px",
-      "default": 42
-    }, {
-      "type": "range",
-      "id": "overlay_text_container_width",
-      "label": "Overlay Text Container Width",
-      "min": 0,
-      "max": 100,
-      "step": 1,
-      "unit": "%",
-      "default": 50,
-      "info": "percentage width of background image"
-    }, {
-      "type": "range",
-      "id": "overlay_text_x_position",
-      "label": "Overlay Text Horizontal Position",
-      "min": 0,
-      "max": 100,
-      "step": 1,
-      "unit": "%",
-      "default": 50
-    }, {
-      "type": "range",
-      "id": "overlay_text_y_position",
-      "label": "Overlay Text Vertical Position",
-      "min": 0,
-      "max": 100,
-      "step": 1,
-      "unit": "%",
-      "default": 50
-    }, {
-      "type": "range",
-      "id": "overlay_text_x_offset",
-      "label": "Overlay Text Horizontal Pin Point",
-      "min": 0,
-      "max": 100,
-      "step": 1,
-      "unit": "%",
-      "default": 50
-    }, {
-      "type": "range",
-      "id": "overlay_text_y_offset",
-      "label": "Overlay Text Vertical Pin Point",
-      "min": 0,
-      "max": 100,
-      "step": 1,
-      "unit": "%",
-      "default": 50
-    }]
+    "name": "Hero",
+    "settings": [],
+    "blocks": [{
+        "name": "Slide",
+        "type": "slide",
+        "settings": [
+          {
+            "id": "image",
+            "type": "image_picker",
+            "label": "Image"
+          },
+          {
+            "type": "text",
+            "id": "image_size",
+            "label": "Image Size",
+            "info": "[Optional] e.g. 800x"
+          },
+          {
+            "type": "url",
+            "id": "video_url",
+            "label": "Video Url",
+            "info": "Url of hero video"
+          },
+          {
+            "type": "textarea",
+            "id": "content",
+            "label": "Hero content (if other than image or video)"
+          },
+          {
+            "id": "title",
+            "type": "text",
+            "label": "Title"
+          },
+          {
+            "id": "subtitle",
+            "type": "text",
+            "label": "Subtitle"
+          },
+          {
+            "id": "button_one_text",
+            "type": "text",
+            "label": "button 1 text",
+            "info": "[Optional]"
+          },
+          {
+            "id": "button_one_href",
+            "type": "url",
+            "label": "button 1 href",
+            "info": "[Optional]"
+          },
+          {
+            "id": "button_two_text",
+            "type": "text",
+            "label": "button 2 text",
+            "info": "[Optional]"
+          },
+          {
+            "id": "button_two_href",
+            "type": "url",
+            "label": "button 2 href",
+            "info": "[Optional]"
+          }
+        ]
+      }]
   }
 {% endschema %}
