--- a/src/snippets/core/molecules/form-search.liquid
+++ b/src/snippets/core/molecules/form-search.liquid
@@ -16,24 +16,25 @@
   <form
     action="/search"
     method="get"
-    class="oo-form-search {{ classes -}}"
+    class="oo-form {{ classes -}}"
     role="search"
     data-form="search"
     {{ extra_attrs -}}>
 
     {%- capture _extra_attrs -%}
-      placeholder="{%- if placeholder_text != blank -%}{{– placeholder_text -}}{%- else -%}search{%- endif -%}"
+      placeholder="{%- if placeholder_text != blank -%}{{ placeholder_text }}{%- else -%}search{%- endif -%}"
     {%- endcapture -%}
 
     {% include 'input',
       type: 'search',
       name: 'q',
+      value: '',
       classes: 'inside-oo-form-search',
       extra_attrs: _extra_attrs %}
 
     {%- assign _extra_attrs = nil -%}
 
-    {% capture _contents %}
+    {% capture _button_content %}
       {% include 'icon',
         name: 'search',
         classes: 'inside-oo-button',
@@ -44,11 +45,11 @@
 
     {% include 'button',
       type: 'submit',
-      contents: _contents,
+      content: _button_content,
       classes: 'inside-oo-form-search',
       extra_attrs: ''  %}
 
-    {% assign _contents = nil %}
+    {% assign _button_content = nil %}
 
   </form>
 
@@ -59,3 +60,4 @@
 {%- endif -%}
 
 {%- assign _errors = nil -%}
+
