--- a/src/snippets/archive/custom.form-add-to-cart.liquid
+++ b/src/snippets/archive/custom.form-add-to-cart.liquid
@@ -26,7 +26,7 @@
     {% include 'product-option', option: option %}
   {% endfor %}
 
-  {% include 'quantity-selector', quantity: 1 %}
+  {% include 'quantity-select', quantity: 1 %}
 
   {% include 'button',
     type: 'submit',
