--- a/src/snippets/archive/wip.quantity-selector.liquid
+++ b/src/snippets/archive/wip.quantity-selector.liquid
@@ -9,7 +9,7 @@
 {%- endcapture -%}
 
 {%- capture errors -%}
-  {%- include 'errors' with arguments, snippet: 'quantity-selector' -%}
+  {%- include 'errors' with arguments, snippet: 'quantity-select' -%}
 {%- endcapture -%}
 
 {%- if quantity == blank -%}1{%- endif -%}
