--- a/src/snippets/base/examples.liquid
+++ b/src/snippets/base/examples.liquid
@@ -44,7 +44,7 @@
 
   {%- when 'quantity' -%}
 
-    {%- include 'quantity-selector', quantity: 1 -%}
+    {%- include 'quantity-select', quantity: 1 -%}
 
   {%- when 'icon' -%}
 
