--- a/src/snippets/core/molecules/form-add-to-cart.liquid
+++ b/src/snippets/core/molecules/form-add-to-cart.liquid
@@ -54,7 +54,7 @@
 
     {%- endfor -%}
 
-    {%- include 'quantity-selector',
+    {%- include 'quantity-select',
       quantity: 1,
       classes: 'inside-oo-form-add-to-cart',
       extra_attrs: '' -%}
