--- a/src/assets/styles/atoms/_label.scss
+++ b/src/assets/styles/atoms/_label.scss
@@ -7,8 +7,14 @@
   }
 }
 
-.input-type-radio.inside-oo-input-group:checked + .oo-label {
-  border-color: rgba(0, 0, 0, 1.0);
+.input-type-radio.inside-oo-input-group {
+  border: 4px solid rgb(255, 255, 255);
+  &:hover + .oo-label {
+    outline: 1px solid rgb(128, 128, 128);
+  }
+  &:checked + .oo-label {
+    outline: 1px solid rgb(0, 0, 0);
+  }
 }
 
 [data-option-value="black"] .oo-label {
