--- a/src/snippets/core/molecules/quantity-select.liquid
+++ b/src/snippets/core/molecules/quantity-select.liquid
@@ -6,31 +6,34 @@
 {%- endcapture -%}
 
 {%- capture _errors -%}
-  {%- include 'errors' with _arguments, _snippet: 'quantity-selector' -%}
+  {%- include 'errors' with _arguments, _snippet: 'quantity-select' -%}
 {%- endcapture -%}
 
 {%- assign _arguments = nil -%}
 
 {%- if _errors == '' -%}
 
-  <div class="oo-quantity-selector {{ classes -}}" {{ extra_attrs -}}>
+  <div
+    class="oo-quantity-select {{ classes -}}"
+    data-quantity-select-container
+    {{ extra_attrs -}}>
 
     {%- include 'button',
       content: '-',
-      classes: 'inside-oo-quantity-selctor',
+      classes: 'inside-oo-quantity-select',
       extra_attrs: 'data-quantity-control="-1"' -%}
 
     {%- include 'input',
       type: 'number',
-      name: 'qty',
+      name: 'quantity',
       value: quantity,
-      id: 'qty',
-      classes: 'inside-oo-quantity-selctor',
-      extra_attrs: 'min=1' -%}
+      id: 'quantity',
+      classes: 'inside-oo-quantity-select',
+      extra_attrs: 'min=1 data-quantity-value' -%}
 
     {%- include 'button',
       content: '+',
-      classes: 'inside-oo-quantity-selctor',
+      classes: 'inside-oo-quantity-select',
       extra_attrs: 'data-quantity-control="1"' -%}
 
   </div>
