containers squared away

--- a/src/snippets/core/molecules/option-group.liquid
+++ b/src/snippets/core/molecules/option-group.liquid
@@ -23,7 +23,7 @@
 
   <div
     class="oo-option-group {{ classes -}}"
-    data-option-group="{{- option.name | handle -}}"
+    data-option-group-container="{{- option.name | handle -}}"
     {{ extra_attrs -}}>
 
     {%- capture _selected_value_container -%}
