--- a/src/assets/styles/molecules/_option-group.scss
+++ b/src/assets/styles/molecules/_option-group.scss
@@ -26,7 +26,7 @@
   }
 }
 
-[data-option-group="color"] .oo-label {
+[data-option-group-container="color"] .oo-label {
   width: 40px;
   height: 40px;
   font-size: 0;
