--- a/src/snippets/core/atoms/price.liquid
+++ b/src/snippets/core/atoms/price.liquid
@@ -23,7 +23,7 @@
 
   <div
     class="oo-prices {{ classes -}}"
-    data-prices
+    data-price-container
     {{ extra_attrs -}}>
 
     {%- if resource.compare_at_price and compare_at_price == true -%}
