--- a/src/layout/theme.liquid
+++ b/src/layout/theme.liquid
@@ -2,6 +2,22 @@
   <!--[if IE 9]> <html class="ie9 no-js supports-no-cookies" lang="{{ shop.locale }}"> <![endif]-->
   <!--[if (gt IE 9)|!(IE)]><!--> <html class="no-js supports-no-cookies" lang="{{ shop.locale }}"> <!--<![endif]-->
   <head>
+
+    {% comment %}
+    <script>
+      console.log(`ding`);
+
+      {%- assign _product = all_products['black-second-skin-v-neck-tee'] -%}
+
+      console.log({{ _product | json }});
+
+      {%- for _variant in _product.variants -%}
+        console.log({{ _variant | json }});
+      {%- endfor -%}
+
+    </script>
+    {% endcomment %}
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
