--- a/src/assets/styles/atoms/_label.scss
+++ b/src/assets/styles/atoms/_label.scss
@@ -17,22 +17,22 @@
   }
 }
 
-[data-option-value="black"] .oo-label {
+[data-option-value-container="black"] .oo-label {
   background-color: rgb(0, 0, 0);
 }
 
-[data-option-value="white"] .oo-label {
+[data-option-value-container="white"] .oo-label {
   background-color: rgb(255, 255, 255);
 }
 
-[data-option-value="pink"] .oo-label {
+[data-option-value-container="pink"] .oo-label {
   background-color: rgb(242, 202, 208);
 }
 
-[data-option-value="maple-sugar"] .oo-label {
+[data-option-value-container="maple-sugar"] .oo-label {
   background-color: rgb(226, 188, 162);
 }
 
-[data-option-value="wine-tasting"] .oo-label {
+[data-option-value-container="wine-tasting"] .oo-label {
   background-color: rgb(69, 31, 43);
 }
