--- a/src/snippets/core/molecules/option-group.liquid
+++ b/src/snippets/core/molecules/option-group.liquid
@@ -47,13 +47,15 @@
 
     {%- for _value in option.values -%}
 
+{% comment %}
       {%- if option.selected_value == _value -%}
         {%- assign _selected = 'checked' -%}
       {%- endif -%}
+{% endcomment %}
 
 
       {%- capture _extra_attrs -%}
-        data-option-value="{{- _value | handle -}}"
+        data-option-value-container="{{- _value | handle -}}"
       {%- endcapture -%}
 
 
