--- a/src/sections/dev/add-to-cart-controls.liquid
+++ b/src/sections/dev/add-to-cart-controls.liquid
@@ -1,15 +1,29 @@
-{% include 'button',
-  content: 'Add To Cart',
-  extra_attrs: 'data-add-to-cart' %}
+<div class="">
+  {% include 'button',
+    content: 'Add To Cart',
+    extra_attrs: 'data-add-to-cart' %}
+</div>
 
-{% include 'button',
-  content: 'Get Cart',
-  extra_attrs: 'data-get-cart' %}
+<div class="">
+  {% include 'button',
+    content: 'Get Cart',
+    extra_attrs: 'data-get-cart' %}
+</div>
 
-{% include 'button',
-  content: 'Empty Cart',
-  extra_attrs: 'data-empty-cart' %}
+<div class="">
+  {% include 'button',
+    content: 'Remove from Cart',
+    extra_attrs: 'data-remove-from-cart' %}
+</div>
 
-{% include 'button',
-  content: 'Toggle Inline Cart',
-  extra_attrs: 'data-toggle-inline-cart' %}
+<div class="">
+  {% include 'button',
+    content: 'Empty Cart',
+    extra_attrs: 'data-empty-cart' %}
+</div>
+
+<div class="">
+  {% include 'button',
+    content: 'Toggle Inline Cart',
+    extra_attrs: 'data-toggle-inline-cart' %}
+</div>
