--- a/src/assets/styles/atoms/_label.scss
+++ b/src/assets/styles/atoms/_label.scss
@@ -20,22 +20,35 @@
   }
 }
 
-[data-option-value-container="black"] .oo-label {
+.swatch-black .oo-label {
   background-color: rgb(0, 0, 0);
 }
 
-[data-option-value-container="white"] .oo-label {
+.swatch-white .oo-label {
   background-color: rgb(255, 255, 255);
 }
 
-[data-option-value-container="pink"] .oo-label {
+.swatch-pink .oo-label {
   background-color: rgb(242, 202, 208);
 }
 
-[data-option-value-container="maple-sugar"] .oo-label {
+.swatch-maple-sugar .oo-label {
   background-color: rgb(226, 188, 162);
 }
 
-[data-option-value-container="wine-tasting"] .oo-label {
+.swatch-wine-tasting .oo-label {
   background-color: rgb(69, 31, 43);
 }
+
+.swatch-desert-rose .oo-label {
+  background-color: rgb(238, 137, 132);
+}
+
+.swatch-haute-red .oo-label {
+  background-color: rgb(190, 28, 52);
+}
+
+.swatch-maui-blue .oo-label {
+  background-color: rgb(100, 197, 202);
+}
+
