--- a/src/snippets/base/variant.liquid
+++ b/src/snippets/base/variant.liquid
@@ -7,6 +7,10 @@
     _value: _variant,
     _name: '_variant',
     _required: false -%}
+  {%- include 'argument',
+    _value: _line_item,
+    _name: '_line_item',
+    _required: false -%}
 {%- endcapture -%}
 
 {%- capture _errors -%}
@@ -18,23 +22,43 @@
 {%- if _errors == '' -%}
 
   <script type="application/json" data-variant-container>
-  [
-    {%- if _variant == blank -%}
-      {%- for _variant in _product.variants -%}
+  {
 
-        {%- include 'variant-object',
-          _product: _product,
-          _variant: _variant -%}{%- unless forloop.last -%},{%- endunless -%}
+    {%- if _line_item != blank -%}
+      "lineItem": {
+        "key": "{{- _line_item.key -}}",
+        "properties": [{%- for property in _line_item.properties -%}
+          "{{- property.first -}}": "{{- property.last -}}"{%- unless forloop.last -%},{%- endunless -%}
+        {%- endfor -%}]
+      },
+    {%- endif -%}
+
+    "options": [
+      {%- for _option in _product.options_with_values -%}
+
+        {%- include 'option-object',
+          _option: _option -%}{%- unless forloop.last -%},{%- endunless -%}
 
       {%- endfor -%}
-    {%- else -%}
+    ],
+    "variants": [
+      {%- if _variant == blank -%}
+        {%- for _variant in _product.variants -%}
 
-        {%- include 'variant-object',
-          _product: _product,
-          _variant: _variant -%}
+          {%- include 'variant-object',
+            _product: _product,
+            _variant: _variant -%}{%- unless forloop.last -%},{%- endunless -%}
 
-    {%- endif -%}
-  ]
+        {%- endfor -%}
+      {%- else -%}
+
+          {%- include 'variant-object',
+            _product: _product,
+            _variant: _variant -%}
+
+      {%- endif -%}
+    ]
+  }
   </script>
 
 {%- else -%}
