--- a/src/snippets/core/molecules/option-group.liquid
+++ b/src/snippets/core/molecules/option-group.liquid
@@ -22,11 +22,11 @@
 {%- if _errors == '' -%}
 
   <div
-    class="oo-option-group {{ classes -}}"
-    data-option-group-container="{{- option.name | handle -}}"
+    class="oo-option-group group-{{- option.name | handle }} {{ classes -}}"
+    data-option-group-control="{{- option.name -}}"
     {{ extra_attrs -}}>
 
-    {%- capture _selected_value_container -%}
+    {%- capture _selected_value -%}
       {%- unless show_selected_value == blank -%}
         <div data-selected-value>{{ option.selected_value }}</div>
       {%- endunless -%}
@@ -38,11 +38,11 @@
       {%- include 'header',
         title: _title,
         level: 3,
-        content: _selected_value_container,
+        content: _selected_value,
         classes: 'inside-oo-option-group',
         extra_attrs: '' -%}
     {%- endunless -%}
-    {%- assign _selected_value_container = nil -%}
+    {%- assign _selected_value = nil -%}
     {%- assign _title = nil -%}
 
     {%- for _value in option.values -%}
@@ -51,8 +51,12 @@
         {%- assign _selected = 'checked' -%}
       {%- endif -%}
 
+      {%- capture _classes -%}
+        oo-option-value inside-oo-option-group swatch-{{- _value | handle -}}
+      {%- endcapture -%}
+
       {%- capture _extra_attrs -%}
-        data-option-value-container="{{- _value | handle -}}"
+        data-option-value-control
       {%- endcapture -%}
 
       {%- include 'input-group',
@@ -61,7 +65,7 @@
         value: _value,
         hide_input: true,
         input_attrs: _selected,
-        classes: 'inside-oo-option-group',
+        classes: _classes,
         extra_attrs: _extra_attrs -%}
 
       {%- assign _selected = nil -%}
