finished javascript stores and structure

--- a/src/assets/styles/molecules/_option-group.scss
+++ b/src/assets/styles/molecules/_option-group.scss
@@ -17,7 +17,7 @@
   display: none;
 }
 
-.oo-heading.inside-oo-option-group {
+.oo-header.inside-oo-option-group {
   display: flex;
   flex-basis: 100%;
   align-items: center;
