--- a/src/snippets/core/molecules/line-item.liquid
+++ b/src/snippets/core/molecules/line-item.liquid
@@ -72,7 +72,7 @@
     {%- include 'button',
       content: _content,
       classes: 'inside-oo-line-item',
-      extra_attrs: '' -%}
+      extra_attrs: 'data-cart-remove-item' -%}
 
     {%- assign _content = nil -%}
   {%- endcapture -%}
