--- a/src/snippets/core/molecules/line-item.liquid
+++ b/src/snippets/core/molecules/line-item.liquid
@@ -13,9 +13,8 @@
 
 {%- if _errors == '' -%}
 
-  {%- assign _classes = classes | append: ' oo-line-item' -%}
+  <div class="oo-line-item {{ classes -}}" {{ extra_attrs -}}>
 
-  {%- capture _product_container_content -%}
     {%- capture _link_content -%}
       {%- include 'image',
         resource: _line_item.product.featured_image,
@@ -31,6 +30,7 @@
       content: _link_content -%}
 
     {%- assign _link_content = nil -%}
+
 
     <div class="oo-line-item--information-wrapper">
 
@@ -75,17 +75,8 @@
       extra_attrs: 'data-cart-remove-item' -%}
 
     {%- assign _content = nil -%}
-  {%- endcapture -%}
 
-  {%- include 'product-container',
-    tag: 'div',
-    _line_item: _line_item,
-    content: _product_container_content,
-    classes: _classes,
-    extra_attrs: extra_attrs -%}
-
-  {%- assign _classes = nil -%}
-  {%- assign _product_container_content = nil -%}
+  </div>
 
 {%- else -%}
 
